file diff logic