@@ -5,15 +5,17 @@ import com.google.common.collect.Maps;
 import com.google.gson.Gson;
 import com.google.gson.reflect.TypeToken;
 
+import java.io.File;
 import java.io.IOException;
 import java.lang.reflect.Type;
 import java.nio.charset.Charset;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.Map;
+import java.util.regex.Pattern;
 
 public class DiffChecker {
-    private static void compareJSON(String leftJSON, String rightJSON) {
+    public static void compareJSON(String leftJSON, String rightJSON) {
         Gson gson = new Gson();
         Type type = new TypeToken<Map<String, Object>>() {
         }.getType();
@@ -43,9 +45,21 @@ public class DiffChecker {
         }
     }
 
-    private static String readFile(String path, Charset encoding)
+    public static String readFile(File file, Charset encoding)
             throws IOException {
-        byte[] encoded = Files.readAllBytes(Paths.get(path));
+        byte[] encoded = Files.readAllBytes(Path.of(file.getPath()));
         return new String(encoded, encoding);
     }
+
+    public static File locateFileWithPattern(File fileDirectory, Pattern pattern) {
+        for (File file : fileDirectory.listFiles()) {
+            if (pattern.matcher(file.getAbsoluteFile().getName()).matches()) {
+                return file;
+            }
+
+        }
+        return null;
+    }
+
+
 }
